src/kubernetes/atani/bitwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden-ingress
  namespace: atani-bitwarden
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: bitwarden.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  number: 80
